--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="page-container">
 
     <header class="header">
-        <img class="logo-image" src="images/logo.svg" alt="Logo Image">
+        <img class="logo-image" src="logo.svg" alt="Logo Image">
     </header>
 
 
@@ -39,7 +39,7 @@
 
         <div class="image-container">
 
-            <img class="illustration" src="images/illustration-mockups.svg" alt="Illustration MockUp Image">
+            <img class="illustration" src="illustration-mockups.svg" alt="Illustration MockUp Image">
 
         </div>
 
